tests/ui/comparison/src/transmuting_null.inline.stderr
error: transmuting a known null pointer into a reference
  --> tests/ui/comparison/src/transmuting_null.rs:8:23
   |
LL |         let x: &u64 = std::mem::transmute(0 as *const u64);
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `0 as *const u64` is known to be a null pointer, so transmuting it into a reference is undefined behavior
   = note: `#[deny(rpl::transmuting_null)]` on by default

error: transmuting a known null pointer into a reference
  --> tests/ui/comparison/src/transmuting_null.rs:12:23
   |
LL |         let x: &u64 = std::mem::transmute(std::ptr::null::<u64>());
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `{0x0 as *const u64}` is known to be a null pointer, so transmuting it into a reference is undefined behavior

error: transmuting a known null pointer into a reference
  --> tests/ui/comparison/src/transmuting_null.rs:27:23
   |
LL |         let x: &u64 = std::mem::transmute(const_null_ptr::<u64>());
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `{0x0 as *const u64}` is known to be a null pointer, so transmuting it into a reference is undefined behavior

error: transmuting a known null pointer into a reference
  --> tests/ui/comparison/src/transmuting_null.rs:31:23
   |
LL |         let x: &u64 = std::mem::transmute(null_ptr::<u64>());
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `{0x0 as *const u64}` is known to be a null pointer, so transmuting it into a reference is undefined behavior

error: transmuting a known null pointer into a reference
  --> tests/ui/comparison/src/transmuting_null.rs:41:23
   |
LL |         let x: &u64 = std::mem::transmute(null_ptr);
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `null_ptr` is known to be a null pointer, so transmuting it into a reference is undefined behavior

error: transmuting a known null pointer into a reference
  --> tests/ui/comparison/src/transmuting_null.rs:48:23
   |
LL |         let x: &u64 = std::mem::transmute(null_ptr);
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `null_ptr` is known to be a null pointer, so transmuting it into a reference is undefined behavior

error: aborting due to 6 previous errors

